# py_graphql

./: .dockerignore  .env  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  tmpclaude-7207-cwd
.claude/: settings.local.json
.github/workflows/: container.yml  tests.yml
k8s/: configmap.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  secret.yaml  service.yaml
src/app/: main.py
src/app/core/: config.py  exceptions.py  llm.py
src/app/graphql/: context.py  extensions.py  mutations.py  queries.py
src/app/graphql/inputs/: movie_input.py
src/app/graphql/resolvers/: analyze_movie_v1.py  analyze_movie_v2.py  helper.py  noop.py
src/app/graphql/types/: movie_analysis.py
src/app/models/: genre.py  member.py  movie.py  opinion.py  person.py
src/app/repositories/: _base_client.py  genre_repository.py  movie_repository.py
src/app/services/: movie_analyzer_v1.py  movie_analyzer_v2.py
tests/: test_etape2_dal_repositories.py  test_etape3_graphql_v1.py  test_etape5_service_v2.py  test_etape6_resolver_v2.py  test_etape7_erreurs.py
